# parallel-combinations

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  parallelComb.sln  parallelComb.vcxproj.filters  parallelCombinations.cpp  parallelCombinations.h  parallelCombinations.sublime-workspace  toDo.txt
project/: parallelComb.vcxproj  parallelComb.vcxproj.filters
src/: combDefines.h  main.cpp  parallelCombinations.h
